refactor!: squash McpContext -> InteractionContext (#48)
## Summary

* **New Features**
* Updated server, tool, resource, and task integrations to support a
newer interaction model, improving compatibility across Java and Kotlin
examples.
* Added clearer support for session notifications, request handling, and
SSE-based event delivery.

* **Bug Fixes**
* Fixed several example and test flows to use the latest server handle
types and context behavior.
* Improved build and release automation for more consistent example
verification and publishing.

### Sequence Diagram

```mermaid
sequenceDiagram
  participant Client
  participant McpDispatcher
  participant DefaultMcpContext
  participant RpcMethodHandler
  participant Server

  Client->>McpDispatcher: dispatchRequestAsync(method, params, channelContext)
  McpDispatcher->>DefaultMcpContext: create(protocol, server)
  DefaultMcpContext-->>McpDispatcher: DispatchContext
  McpDispatcher->>RpcMethodHandler: handle(DispatchContext, params)
  RpcMethodHandler->>Server: server().tasks()/resources()/tools()
  Server-->>RpcMethodHandler: domain result
  RpcMethodHandler-->>McpDispatcher: response payload
  McpDispatcher-->>Client: DispatchResult
```