@@ -12,17 +12,18 @@ import dev.tachyonmcp.protocol.mcp.v2025_11_25.models.EmptyResult;
 import dev.tachyonmcp.protocol.mcp.v2025_11_25.models.ListResourceTemplatesResult;
 import dev.tachyonmcp.protocol.mcp.v2025_11_25.models.ListResourcesResult;
 import dev.tachyonmcp.protocol.mcp.v2025_11_25.models.ReadResourceResult;
-import dev.tachyonmcp.server.McpMethodHandler;
-import dev.tachyonmcp.server.McpServer;
+import dev.tachyonmcp.runtime.Session;
+import dev.tachyonmcp.runtime.SseConnection;
+import dev.tachyonmcp.runtime.SseEvent;
+import dev.tachyonmcp.server.RpcMethodHandler;
+import dev.tachyonmcp.server.Server;
 import dev.tachyonmcp.server.TachyonServer;
 import dev.tachyonmcp.server.domain.Annotations;
 import dev.tachyonmcp.server.domain.Icon;
 import dev.tachyonmcp.server.domain.Role;
 import dev.tachyonmcp.server.domain.TextResourceContents;
 import dev.tachyonmcp.server.session.DefaultMcpContext;
-import dev.tachyonmcp.server.session.McpSession;
-import dev.tachyonmcp.server.session.SseConnection;
-import dev.tachyonmcp.server.session.SseEvent;
+import dev.tachyonmcp.server.session.DispatchContext;
 import dev.tachyonmcp.transport.jsonrpc.JsonRpcError;
 import dev.tachyonmcp.transport.jsonrpc.JsonRpcErrors;
 import java.util.HashMap;
@@ -36,12 +37,12 @@ import org.junit.jupiter.api.Test;
 
 class ResourceRegistryTest {
 
-    private final McpServer server = TachyonServer.builder().build();
+    private final Server server = TachyonServer.builder().build();
     private final ResourceRegistry registry = new ResourceRegistry(server);
-    private final HashMap<String, McpMethodHandler> handlers = new HashMap<>();
+    private final HashMap<String, RpcMethodHandler> handlers = new HashMap<>();
 
-    private static DefaultMcpContext context(McpSession session, McpServer server) {
-        var ctx = new DefaultMcpContext(Protocols.versions().get(0), server);
+    private static DispatchContext context(Session session, Server server) {
+        var ctx = DefaultMcpContext.create(Protocols.versions().getFirst(), server);
         ctx.setSession(session);
         return ctx;
     }
@@ -86,7 +87,7 @@ class ResourceRegistryTest {
         assertThat(result).isInstanceOf(ReadResourceResult.class);
         var readResult = (ReadResourceResult) result;
         assertThat(readResult.contents()).hasSize(1);
-        assertThat(readResult.contents().get(0).uri()).isEqualTo("test://resource/1");
+        assertThat(readResult.contents().getFirst().uri()).isEqualTo("test://resource/1");
     }
 
     @Test
@@ -95,6 +96,24 @@ class ResourceRegistryTest {
 
         assertThat(result).isInstanceOf(ListResourceTemplatesResult.class);
         assertThat(((ListResourceTemplatesResult) result).resourceTemplates()).isEmpty();
+    }
+
+    @Test
+    void subscribeRejectsNullSession() throws Exception {
+        var result = handlers.get("resources/subscribe")
+                .handle(DefaultMcpContext.noop(), Map.of("uri", "test://resource/1"));
+
+        assertThat(result).isInstanceOf(JsonRpcError.class);
+        assertThat(((JsonRpcError) result).code()).isEqualTo(JsonRpcErrors.INVALID_REQUEST);
+    }
+
+    @Test
+    void unsubscribeRejectsNullSession() throws Exception {
+        var result = handlers.get("resources/unsubscribe")
+                .handle(DefaultMcpContext.noop(), Map.of("uri", "test://resource/1"));
+
+        assertThat(result).isInstanceOf(JsonRpcError.class);
+        assertThat(((JsonRpcError) result).code()).isEqualTo(JsonRpcErrors.INVALID_REQUEST);
     }
 
     @Test
